--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "nodemailer": "^8.0.1",
     "react": "19.2.3",
+    "react-calendly": "^4.4.0",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
